# ssd_public

./: .env  .gitignore  AGENTS.md  README.md  archivo.txt  docker-compose.edge.yml  docker-compose.server.yml  docker-compose.test.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  schema.sql  start.sh
backend/app/: backend.py  db.py  ingestor.py  main.py  settings.py  worker.py
database/: init.sql  pg_hba.conf
frontend/: Dockerfile  entrypoint.sh  index.html  nginx.conf  nginx.template.conf  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
processing-node/: .env  Dockerfile  processing_node.py  pyproject.toml  requirements.txt  start.sh
sensor-sim/: .env  Dockerfile  sensor_simulator.py  start.sh
tests/: system_test.py  test_backend.py
worker/: .env  Dockerfile  main.py  start.sh
